--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     height: 300px;
     background-image: url(desktop/image-hero.jpg);
     background-size: cover;
+    background-repeat: repeat;
 }
 
 div.menu span{
@@ -34,13 +35,13 @@ h1.title{
 
 .mid-section {
     background-color: white; 
-    max-width: 50%;
-    max-height: 40%;
-    padding: 20px;
+    max-width: 350px;
+    max-height: 300px;
+    padding: 40px;
     margin: 10px;
     position: relative;
-    left: 340px;
-    bottom: 90px;
+    left: 450px;
+    bottom: 150px;
 
 }
 
@@ -57,6 +58,60 @@ h1.title{
 
 .vr-headset{
     position: relative;
-    left: 85px;
+    left: 70px;
     top: 75px;
+    max-width: 500px;
+}
+
+.creations-header{ 
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    margin-left: 50px;
+    text-transform: uppercase;
+    
+    
+}
+
+.creations-header h2{
+    font-weight: lighter;
+}
+
+.creations-header .see-all-button{
+    background-color: #FFF;
+    border-color: #000;
+    border-width: 1px;
+    width: 90px;
+    height: 25px;
+    font-weight: 100;
+    font-size: 12px;
+    text-transform: uppercase;
+    box-shadow: 0;
+}
+
+.row .flex-gap{
+    display: inline-flex;
+    margin: 5px;
+    line-height: 0;
+    
+}
+
+.flex-gap > div {
+    
+    margin: 0px 30px 0px 30px;
+}
+
+.col-3 .first-row-column{
+    justify-content: space-between;
+    margin: 20px;
+    padding: 20px; 
+}
+
+.row .flex-gap h2{
+    color: #FFF;
+    position: relative;
+    bottom: 100px;
+    left: 95px;
+    font-weight: 100;
+    opacity: 0.9;
+    text-transform: uppercase;
 }
