--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,7 @@ h1.title{
     margin-bottom: 20px;
     margin-left: 50px;
     text-transform: uppercase;
-    
-    
+    margin-top: -90px;
 }
 
 .creations-header h2{
@@ -92,12 +91,13 @@ h1.title{
     display: inline-flex;
     margin: 5px;
     line-height: 0;
+    padding: 0px;
     
 }
 
 .flex-gap > div {
-    
-    margin: 0px 30px 0px 30px;
+    margin: -20px 30px -40px 30px;
+    padding: -30px;
 }
 
 .col-3 .first-row-column{
@@ -114,4 +114,44 @@ h1.title{
     font-weight: 100;
     opacity: 0.9;
     text-transform: uppercase;
+    max-width: 100%;   
+}
+
+.footer{
+    color: #FFF;
+    background-color: #000;
+    width: 1300px;
+    height: 90px;
+}
+
+.brand{
+    margin-left: 90px;
+    padding: 10px;
+}
+
+span.footer-menu{
+    margin-left: 90px;
+    display: inline-block;
+    font-size: 10px;
+    opacity: 0.8;
+    text-transform: capitalize;
+}
+
+span.footer-menu span{
+    padding: 7px;
+}
+
+.copyright{
+    opacity: 0.5;
+    font-size: 9px;
+    position: relative;
+    left: 950px;
+    bottom: 15px;
+}
+
+.attribution{
+    line-height: 20px;
+    text-align: center;
+    opacity: 0.8;
+    font-size: 10px;
 }
